--- a/_sass/_layouts/_base.scss
+++ b/_sass/_layouts/_base.scss
@@ -62,6 +62,7 @@ select {
 /* Twitter Feed */
 .sidetab {
     position: fixed;
+    z-index: 999;
     padding-right: 10px;
     bottom: 0;
     right: 10px;
@@ -80,6 +81,7 @@ select {
 .tweets {
     display: none;
     position: fixed;
+    z-index: 999;
     bottom: 0;
     right: 10px;
     max-height: 400px;
