Tweak Cardiff Rouge
- Added padding to the menu
- Added styles for `h3`, `h4`, `h5`, `h6`
- Styled the twitter tray
- Added a black border to everything so that it looks sharper
- Minor version bump

--- a/_sass/_themes/_cardiffrouge/_landing.scss
+++ b/_sass/_themes/_cardiffrouge/_landing.scss
@@ -2,6 +2,7 @@ header.landing {
 
     .wrap {
         padding: 0;
+        border: 1px solid $black;
         @include box-style($middle-bg);
         @include border-radius($corner-radius);
     }
@@ -39,6 +40,7 @@ header.landing {
 article.landing {
     .wrap {
         padding: 0;
+        border: 1px solid $black;
         @include box-style($middle-bg);
         @include border-radius($corner-radius);
     }
