--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -33,7 +33,7 @@ layout: default
       <ul>
         {% for post in news %}
           {% if post.tags contains {{page.tag}} %}
-            <li>{{page.date | date: "%d-%m-%Y"}}: <a href="{{post.url}}">{{post.title}}</a></li>
+            <li>{{post.date | date: "%d-%m-%Y"}}: <a href="{{post.url}}">{{post.title}}</a></li>
           {% endif %}
         {% endfor %}
       </ul>
