--- a/_sass/_themes/_cardiffrouge/_posts.scss
+++ b/_sass/_themes/_cardiffrouge/_posts.scss
@@ -8,6 +8,7 @@
 div#disqus_thread {
     margin-left: 5px;
     margin-right: 5px;
+    border: $border-style;
     @include border-radius($corner-radius);
     @include box-style($middle-bg);
 }
