Add Emacs Page!
- This adds an Emacs page, could probably use some more work at some
  point
- This adds a new include `_includes/image_caption.html`. This allows
  you to easily add an image with a caption. It's used as follows:

  ```
  {% include image_caption.html url="/path/to/image.png"
     caption="Your imgae caption here" %}
  ```

- This also updates the base layout so that the caption is aligned
  properly across all themes which use the base layout

--- a/_sass/_layouts/_base.scss
+++ b/_sass/_layouts/_base.scss
@@ -247,3 +247,13 @@ ul#menu{
   position: relative;
   top: 3px;
 }
+
+/* Image caption */
+
+.img-caption {
+
+    .caption {
+        margin: auto;
+        width: 70%;
+    }
+}
