--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,60 +1,49 @@
 ---
-layout: default
+layout: page
 ---
 
-<div class="post">
+<h3>About</h3>
 
-    <header class="post-header">
-      <h1>{{page.name}}</h1>
-    </header>
+<ul>
+<li><a href="{{page.github}}">Project Home</a></li>
+{% if page.link %}
+    <li><a href="{{page.link}}">Documentation</a></li>
+{% endif %}
+</ul>
 
-    <article class="post-content">
-
-      <h3>About</h3>
-
-      <ul>
-        <li><a href="{{page.github}}">Project Home</a></li>
-        {% if page.link %}
-            <li><a href="{{page.link}}">Documentation</a></li>
-        {% endif %}
-      </ul>
-
-      {{content}}
+{{content}}
 
 
-      <h3>News</h3>
+<h3>News</h3>
 
-      <p>
-        Here you can find the latest updates and announcements about the project.
-      </p>
-      
-      {% assign news = site.categories["news"]  %}
+<p>
+Here you can find the latest updates and announcements about the project.
+</p>
 
-      <ul>
-        {% for post in news %}
-          {% if post.tags contains {{page.tag}} %}
-            <li>{{post.date | date: "%d-%m-%Y"}}: <a href="{{post.url}}">{{post.title}}</a></li>
-          {% endif %}
-        {% endfor %}
-      </ul>
+{% assign news = site.categories["news"]  %}
 
-      <h3>Getting Started</h3>
+<ul>
+{% for post in news %}
+    {% if post.tags contains {{page.tag}} %}
+    <li>{{post.date | date: "%d-%m-%Y"}}: <a href="{{post.url}}">{{post.title}}</a></li>
+    {% endif %}
+{% endfor %}
+</ul>
 
-      <p>
-        Want to get involved? Great! Not sure where to start? Don't worry!
-        We have you covered, below is a list of tutorials where you can find out
-        how to get involved. We can't wait for you first pull request!
-      </p>
+<h3>Getting Started</h3>
 
-      {% assign tutorials = site.categories["tutorial"] | sort %}
+<p>
+Want to get involved? Great! Not sure where to start? Don't worry!
+We have you covered, below is a list of tutorials where you can find out
+how to get involved. We can't wait for you first pull request!
+</p>
 
-      <ul>
-        {% for post in tutorials %}
-            {% if post.tags contains {{page.tag}} and post.tags contains "getstarted"%}
-                <li><a href="{{post.url}}">{{post.title}}</a></li>
-            {% endif %}
-        {% endfor %}
-      </ul>
+{% assign tutorials = site.categories["tutorial"] | sort %}
 
-    </article>
-</div>
+<ul>
+{% for post in tutorials %}
+    {% if post.tags contains {{page.tag}} and post.tags contains "getstarted"%}
+        <li><a href="{{post.url}}">{{post.title}}</a></li>
+    {% endif %}
+{% endfor %}
+</ul>
