--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,12 @@
 ---
-layout: default
+layout: base
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-  </header>
 
-  <article class="post-content">
-  {{ content }}
-  </article>
+<header class="post-header">
+    <h1>{{page.title}}</h1>
+</header>
 
-</div>
+<article class="post-content">
+    {{content}}
+</article>
