--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,33 +1,30 @@
 ---
-layout: default
+layout: base
 ---
-<div class="post">
+        <header class="post-header">
+            <h1>{{ page.title }}</h1>
+            <p class="meta">{% if page.author %}Written by  {{ page.author }}. {% endif %} 
+                Published {{ page.date | date: "%b %-d, %Y" }}{% if page.categories.size > 0 %}, in <a href="/blog/{{page.categories[0]}}.html">{{page.categories[0] | capitalize}}</a>{% endif %}</p>
+        </header>
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-    <p class="meta">{% if page.author %}Written by  {{ page.author }}. {% endif %} 
-        Published {{ page.date | date: "%b %-d, %Y" }}{% if page.categories.size > 0 %}, in <a href="/blog/{{page.categories[0]}}.html">{{page.categories[0] | capitalize}}</a>{% endif %}</p>
-  </header>
+        <article class="post-content">
+        {{ content }}
+        </article>
+            {% if page.comments %}
+            <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                    var disqus_shortname = 'codeclub'; // required: replace example with your forum shortname
+                    var disques_identifier = '{{ post.title }}';
 
-  <article class="post-content">
-  {{ content }}
-  </article>
-    {% if page.comments %}
-    <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'codeclub'; // required: replace example with your forum shortname
-            var disques_identifier = '{{ post.title }}';
+                    /* * * DON'T EDIT BELOW THIS LINE * * */
+                    (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
-    {% endif %}
-</div>
+            {% endif %}
 
